--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
     <meta name="author" content="DeanDark">
     <title>DeanDark</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="DeanDarkOdznaka.png" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link rel="shortcut icon" href="images/DeanDarkOdznaka.png" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="content">
+<div id="particles-js"></div>
+<div class="content">
     <h1>
-        DeanDark
+       <b> DeanDark </b>
     </h1>
-</div>
-<div>
-    <p  id="button">
+
+    <div class="links">
         <a href="https://github.com/d3andark" target="_blank">
-            Github
+            GitHub
         </a>
+
         <a href="https://discord.com/users/328161853211541506" target="_blank">
             Discord
         </a>
+
         <a href="https://discord.gg/QGXvmTJ3b3" target="_blank">
             DeanDark's Corner
         </a>
-    </p>
+    </div>
 </div>
-
 <div class="lines">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
