Added animated clicking on the buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>DeanDark</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <link rel="shortcut icon" href="DeanDarkOdznaka.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/DeanDarkOdznaka.png" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -22,15 +22,15 @@
     </h1>
 
     <div class="links">
-        <a href="https://github.com/d3andark" target="_blank">
+        <a href="https://github.com/d3andark" target="_blank" id="link">
             GitHub
         </a>
 
-        <a href="https://discord.com/users/328161853211541506" target="_blank">
+        <a href="https://discord.com/users/328161853211541506" target="_blank" id="link">
             Discord
         </a>
 
-        <a href="https://discord.gg/QGXvmTJ3b3" target="_blank">
+        <a href="https://discord.gg/QGXvmTJ3b3" target="_blank" id="link">
             DeanDark's Corner
         </a>
     </div>
@@ -57,6 +57,6 @@
         });
     });
 </script>
-    
+
 </body>
 </html>
