--- a/about.html
+++ b/about.html
@@ -50,8 +50,9 @@
             <br>
             &nbsp
             <br>
-            I have also been moderating the bot community StartIT for a while now.
+            I have also been moderating the bot community <a href="https://startit.bot/" target="_blank">StartIT</a> for a while now.
         </p>
+        
     </div>
     </main>
 </div>
