--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>DeanDark</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <link rel="shortcut icon" href="images/DeanDarkOdznaka.png" type="image/x-icon">
+    <link rel="shortcut icon" href=".images/DeanDarkOdznaka.png" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
