--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>DeanDark</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <link rel="shortcut icon" href="images/DeanDarkOdznaka.png" type="image/x-icon">
+    <link rel="shortcut icon" href="DeanDarkOdznaka.png" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -49,7 +49,12 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         var lines = document.querySelectorAll('.line');
-
+        var randomOffset = Math.floor(Math.random() * 100) + 'vw';
+        // Przesuń linię o losową wartość w poziomie
+        lines.forEach(function(line) {
+            line.style.left = randomOffset;
+        });
+        // Po zakończeniu animacji przesuń linię o losową wartość w poziomie
         lines.forEach(function(line) {
             line.addEventListener('animationiteration', function() {
                 // Po zakończeniu animacji przesuń linię o losową wartość w poziomie
