--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="style-about.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <link rel="shortcut icon" href="./images/DeanDarkOdznaka.png" type="image/x-icon">
-    <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -31,11 +30,20 @@
         <b> About </b>
     </h1>
     </header>
+
+    <div class="languageSwitch">
+
+        <p>
+            Switch language
+        </p>
+
+
+    </div>
     <main>
     <div class="about_content">
 
         <p class="info">
-            I am DeanDark, or Junior Developer. I'm learning to program on my own, in a bigger way. And I've been learning it since I was 10 years old, and at the age of 7 I had my first exposure to the computer exclusively. Sometimes I couldn't see what I was doing (Sometimes it still happens).
+            Hello, I am <b>DeanDark</b>, or Junior Developer. I'm learning to program on my own, in a bigger way. And I've been learning it since I was 10 years old, and at the age of 7 I had my first exposure to the computer exclusively. Sometimes I couldn't see what I was doing (Sometimes it still happens).
             <br>
             &nbsp
             <br>
@@ -78,6 +86,55 @@
                 line.style.left = randomOffset;
             });
         });
+    });
+</script>
+
+<script>
+    const infoElement = document.querySelector('.info');
+    const languageSwitchParagraph = document.querySelector('.languageSwitch p');
+    let languageSwitch = false;
+
+    let originalText = infoElement.innerHTML;
+    let polishText = "Cześć, jestem <b>DeanDark</b>, czyli Junior Developer. Uczę się programować na własną rękę, w większym wymiarze. I uczę się tego od 10 roku życia, a w wieku 7 lat miałem pierwszą styczność wyłącznie z komputerem. Czasami nie widziałem, co robię (czasami nadal się to zdarza).\n" +
+            "<br>\n" +
+            "&nbsp\n" +
+            "<br>\n" +
+            "Lubię grać w gry wideo, programować, zajmować się astronomią, geopolityką, uczyć się nowych interesujących rzeczy itp. Czasami w wolnym czasie czytam książki (to naprawdę rzadko, z powodu mojej dysleksji czasami mam z tym trudności) i rysuję.\n" +
+            "<br>\n" +
+            "Najczęściej gram w gry takie jak - Stardew Valley, Overwatch 2, Minecraft, Osu!, Euro Track Simulator 2 itp.\n" +
+            "<br>\n" +
+            "&nbsp\n" +
+            "<br>\n" +
+            "Potrafię takie języki jak Polski (Ojczysty język), Angielski, oraz tak trochę Śląski i Włoski (Ten Włoski proszę brać na dystans).\n" +
+            "<br>\n" +
+            "&nbsp\n" +
+            "<br>\n" +
+            "A języki programowania, które umiem to HTML, CSS, Python, TypeScript, SQL i chcę się ich nauczyć więcej!\n" +
+            "<br>\n" +
+            "&nbsp\n" +
+            "<br>\n" +
+            "Od jakiegoś czasu moderuję również społeczność bota <a href='https://startit.bot/' target='_blank'>StartIT</a>.";
+
+    // Check if there is a stored state in localStorage
+    if (localStorage.getItem('languageSwitch') !== null) {
+        // If there is, set the switch to the stored state
+        languageSwitch = localStorage.getItem('languageSwitch') === 'true';
+
+        // Set the text according to the switch state
+        infoElement.innerHTML = languageSwitch ? polishText : originalText;
+    }
+
+    languageSwitchParagraph.addEventListener('click', function() {
+        languageSwitch = !languageSwitch;
+        if (languageSwitch) {
+            infoElement.innerHTML = polishText;
+        } else {
+            infoElement.innerHTML = originalText;
+        }
+
+
+        // Store the state of the switch in localStorage
+        localStorage.setItem('languageSwitch', languageSwitch);
     });
 </script>
 
