--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
     let languageSwitch = false;
 
     let originalText = infoElement.innerHTML;
-    let polishText = "Cześć, jestem <b>DeanDark</b>, czyli Junior Developer. Uczę się programować na własną rękę, w większym wymiarze. I uczę się tego od 10 roku życia, a w wieku 7 lat miałem pierwszą styczność wyłącznie z komputerem. Czasami nie widziałem, co robię (czasami nadal się to zdarza).\n" +
+    let polishText = "Cześć, jestem <b>DeanDark</b>, czyli Junior Developer. Uczę się programować na własną rękę, w większości. I uczę się tego od 10 roku życia, a w wieku 7 lat miałem pierwszą styczność wyłącznie z komputerem. Czasami nie widziałem, co robię (czasami nadal się to zdarza).\n" +
             "<br>\n" +
             "&nbsp\n" +
             "<br>\n" +
