Added embedded links (probably)

--- a/about.html
+++ b/about.html
@@ -8,6 +8,16 @@
     <meta name="language" content="English">
     <meta name="discription" content="Site made by and about DeanDark">
     <meta name="author" content="DeanDark">
+    <meta property="og:title" content="DeanDark's Site" >
+    <meta property="title" content="DeanDark's Site">
+    <meta property="description" content="Website that's about DeanDark made by himself">
+    <meta property="og:description" content="Website that's about DeanDark made by himself">
+    <meta property="og:url" content="https://deandark.me">
+    <meta property="og:image" content="https://deandark.me/DeanDarkOdznaka.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="DeanDark">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="pl_PL">
     <title>About DeanDark</title>
     <link rel="stylesheet" href="style-about.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -95,7 +105,7 @@
     let languageSwitch = false;
 
     let originalText = infoElement.innerHTML;
-    let polishText = "Cześć, jestem <b>DeanDark</b>, czyli Junior Developer. Uczę się programować na własną rękę, w większości. I uczę się tego od 10 roku życia, a w wieku 7 lat miałem pierwszą styczność z komputerem na wyłączność. Czasami nie widziałem, co robię (czasami nadal się to zdarza).\n" +
+    let polishText = "Cześć, jestem <b>DeanDark</b>, czyli Junior Developer. Uczę się programować na własną rękę, w większości. I uczę się tego od 10 roku życia, a w wieku 7 lat miałem pierwszą styczność wyłącznie z komputerem. Czasami nie widziałem, co robię (czasami nadal się to zdarza).\n" +
             "<br>\n" +
             "&nbsp\n" +
             "<br>\n" +
@@ -106,6 +116,8 @@
             "&nbsp\n" +
             "<br>\n" +
             "Potrafię takie języki jak Polski (Ojczysty język), Angielski, oraz tak trochę Śląski i Włoski (Ten Włoski proszę brać na dystans).\n" +
+            "<br>\n" +
+            "&nbsp\n" +
             "<br>\n" +
             "A języki programowania, które umiem to HTML, CSS, Python, TypeScript, SQL i chcę się ich nauczyć więcej!\n" +
             "<br>\n" +
