--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="language" content="English">
     <meta name="discription" content="DeanDark's site">
     <meta name="author" content="DeanDark">
+    <meta property="og:title" content="DeanDark's Site" >
+    <meta property="title" content="DeanDark's Site">
+    <meta property="description" content="Website that's made for and by DeanDark">
+    <meta property="og:description" content="Website that's made for and by DeanDark">
+    <meta property="og:url" content="https://deandark.me">
+    <meta property="og:image" content="https://deandark.me/DeanDarkOdznaka.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="DeanDark">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="pl_PL">
     <title>DeanDark</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
