added color to embed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="language" content="English">
     <meta name="discription" content="DeanDark's site">
     <meta name="author" content="DeanDark">
+    <meta name="theme-color" content="#8006da" >
     <meta property="og:title" content="DeanDark's Site" >
     <meta property="title" content="DeanDark's Site">
     <meta property="description" content="Website that's made for and by DeanDark">
