--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <meta name="language" content="English">
     <meta name="discription" content="Site made by and about DeanDark">
     <meta name="author" content="DeanDark">
+    <meta name="theme-color" content="#8006da" >
     <meta property="og:title" content="DeanDark's Site" >
     <meta property="title" content="DeanDark's Site">
     <meta property="description" content="Website that's about DeanDark made by himself">
