--- a/Projects.html
+++ b/Projects.html
@@ -11,10 +11,10 @@
 	<meta name="theme-color" content="#8006da" >
 	<meta property="og:title" content="DeanDark's Site" >
 	<meta property="title" content="DeanDark's Site">
-	<meta property="description" content="Website that's made for and by DeanDark">
-	<meta property="og:description" content="Website that's made for and by DeanDark">
+	<meta property="description" content="There will be something SOON™">
+	<meta property="og:description" content="There will be something SOON™">
 	<meta property="og:url" content="https://deandark.me">
-	<meta property="og:image" content="https://deandark.me/DeanDarkOdznaka.png">
+	<meta property="og:image" content="https://deandark.me/eyes.png">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="DeanDark">
 	<meta property="og:locale" content="en_US">
