fix's and move images to cdn

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <meta property="description" content="Website that's about DeanDark made by himself">
     <meta property="og:description" content="Website that's about DeanDark made by himself">
     <meta property="og:url" content="https://deandark.me">
-    <meta property="og:image" content="https://deandark.me/DeanDarkOdznaka.png">
+    <meta property="og:image" content="http://cdn.deandark.me/DeanDarkOdznaka.png">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="DeanDark">
     <meta property="og:locale" content="en_US">
