--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="description" content="Website that's made for and by DeanDark">
     <meta property="og:description" content="Website that's made for and by DeanDark">
     <meta property="og:url" content="https://deandark.me">
-    <meta property="og:image" content="https://deandark.me/DeanDarkOdznaka.png">
+    <meta property="og:image" content="http://cdn.deandark.me/DeanDarkOdznaka.png">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="DeanDark">
     <meta property="og:locale" content="en_US">
@@ -22,7 +22,7 @@
     <title>DeanDark</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <link rel="shortcut icon" href="DeanDarkOdznaka.png" type="image/x-icon">
+    <link rel="shortcut icon" href="http://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
