--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <meta property="description" content="Website that's about DeanDark made by himself">
     <meta property="og:description" content="Website that's about DeanDark made by himself">
     <meta property="og:url" content="https://deandark.me">
-    <meta property="og:image" content="http://cdn.deandark.me/DeanDarkOdznaka.png">
+    <meta property="og:image" content="https://cdn.deandark.me/DeanDarkOdznaka.png">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="DeanDark">
     <meta property="og:locale" content="en_US">
@@ -22,7 +22,7 @@
     <title>About DeanDark</title>
     <link rel="stylesheet" href="style-about.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <link rel="shortcut icon" href="DeanDarkOdznaka.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
 <body>
 
