--- a/Projects.html
+++ b/Projects.html
@@ -21,8 +21,10 @@
 	<meta property="og:locale:alternate" content="pl_PL">
 	<title>DeanDark</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="global.css">
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-	<link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
+	<link rel="shortcut icon" href="http://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
+	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="particles-js"></div>
