added /discord hiperlink

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 Discord
         </a>
 
-        <a href="https://discord.gg/QGXvmTJ3b3" target="_blank">
+        <a href="./discord" target="_blank">
                 DeanDark's Corner
         </a>
     </div>
