--- a/discord.html
+++ b/discord.html
@@ -9,11 +9,11 @@
 	<meta name="discription" content="DeanDark's site">
 	<meta name="author" content="DeanDark">
 	<meta name="theme-color" content="#8006da" >
-	<meta property="og:title" content="DeanDark's Site" >
-	<meta property="title" content="DeanDark's Site">
-	<meta property="description" content="Website that's made for and by DeanDark">
-	<meta property="og:description" content="Website that's made for and by DeanDark">
-	<meta property="og:url" content="https://deandark.me">
+	<meta property="og:title" content="DeanDark's Discord Server" >
+	<meta property="title" content="DeanDark's Discord Server">
+	<meta property="description" content="Join to DeanDark's Server, where we're trying to make community!">
+	<meta property="og:description" content="Join to DeanDark's Server, where we're trying to make community!">
+	<meta property="og:url" content="https://discord.gg/QGXvmTJ3b3">
 	<meta property="og:image" content="https://cdn.deandark.me/DeanDarkOdznaka.png">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="DeanDark">
