--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </a>
     </div>
     <div class="links_c2">
-        <a href="./Projects">
+        <a href="./projects">
             Projects (Soon™)
         </a>
     </div>
