--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 <div class="content">
     <h1>
        <b> DeanDark </b>
+
+        <p>
+            <b>Designer, Junior Developer, Programmer, and more!</b>
+        </p>
+
     </h1>
+
 
     <div class="links">
         <a href="./about">
@@ -41,12 +47,8 @@
                 GitHub
         </a>
 
-        <a href="https://discord.com/users/328161853211541506" target="_blank">
-                Discord
-        </a>
-
-        <a href="./discord" target="_blank">
-                DeanDark's Corner
+        <a href="https://deandark.me/contact" target="_blank">
+                Contanct
         </a>
     </div>
     <div class="links_c2">
