added contact's page, and more!

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 GitHub
         </a>
 
-        <a href="https://discord.gg/QGXvmTJ3b3" target="_blank">
-                Discord
+        <a href="https://deandark.me/contact" target="_blank">
+                Contanct
         </a>
     </div>
     <div class="links_c2">
