contact in the same page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 GitHub
         </a>
 
-        <a href="https://deandark.me/contact" target="_blank">
+        <a href="https://deandark.me/contact">
                 Contanct
         </a>
     </div>
