About -> About me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="links">
         <a href="./about">
-            About
+            About me
         </a>
 
         <a href="https://github.com/d3andark" target="_blank">
