--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 			deandark
 		</a>
 		<a href="https://deandark.me/discord" class="button-with-icon" target="_blank">
-			<img src="https://cdn.deandark.me/DeanDarkOdznakaWhite.png" class="icon">
+			<img src="https://cdn.deandark.me/LogoWhite.svg" class="icon">
 			DeanDark's Corner
 		</a>
 
