--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </a>
 
         <a href="https://deandark.me/contact">
-                Contanct
+                Contact
         </a>
     </div>
     <div class="links_c2">
