Redesign about, and fix about

--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
 <div id="particles-js"></div>
 
 <div class="back">
-<a href="./">
-    < &nbsp BACK
-</a>
+    <button href="./">
+        < &nbsp BACK
+    </button>
 </div>
 
 <div class="content">
@@ -44,10 +44,9 @@
     </header>
 
     <div class="languageSwitch">
-
-        <p>
-            Switch language
-        </p>
+        <button class="languageSwitch">
+            Change language
+        </button>
 
 
     </div>
