fix back in about

--- a/about.html
+++ b/about.html
@@ -30,8 +30,10 @@
 <div id="particles-js"></div>
 
 <div class="back">
-    <button href="./">
+    <button>
+        <a href="./">
         < &nbsp BACK
+        </a>
     </button>
 </div>
 
