--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#8006da" >
     <meta property="og:title" content="DeanDark's Site" >
     <meta property="title" content="DeanDark's Site">
-    <meta property="description" content="Website that's made for and by DeanDark">
+    <meta name="description" content="Witaj na stronie DeanDark! Jesteśmy domem dla Junior Developera, programisty, projektanta i wiele więcej. Odkryj nasze projekty, dowiedz się więcej o nas i skontaktuj się z nami.">
     <meta property="og:description" content="Website that's made for and by DeanDark">
     <meta property="og:url" content="https://deandark.me">
     <meta property="og:image" content="https://cdn.deandark.me/DeanDarkOdznaka.png">
