make anhore on whole button in about

--- a/about.html
+++ b/about.html
@@ -30,11 +30,9 @@
 <div id="particles-js"></div>
 
 <div class="back">
-    <button>
-        <a href="./">
+        <a href="./" class="button">
         < &nbsp BACK
         </a>
-    </button>
 </div>
 
 <div class="content">
