--- a/discord.html
+++ b/discord.html
@@ -8,13 +8,13 @@
 	<meta name="language" content="English">
 	<meta name="discription" content="DeanDark's site">
 	<meta name="author" content="DeanDark">
-	<meta name="theme-color" content="#2b2d36" >
-	<meta property="og:title" content="DeanDark's Space" >
-	<meta property="title" content="DeanDark's Space">
-	<meta property="description" content="Space, you can get there, but can you escape?">
-	<meta property="og:description" content="Space, you can get there, but can you escape?">
-	<meta property="og:url" content="https://deandark.me">
-	<meta property="og:image" content="https://cdn.deandark.me/comet.png">
+	<meta name="theme-color" content="#8006da" >
+	<meta property="og:title" content="DeanDark's Discord Server" >
+	<meta property="title" content="DeanDark's Discord Server">
+	<meta property="description" content="Join to DeanDark's Server, where we're trying to make community!">
+	<meta property="og:description" content="Join to DeanDark's Server, where we're trying to make community!">
+	<meta property="og:url" content="https://discord.gg/QGXvmTJ3b3">
+	<meta property="og:image" content="https://cdn.deandark.me/DeanDarkOdznaka.png">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="DeanDark">
 	<meta property="og:locale" content="en_US">
@@ -25,10 +25,12 @@
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
-<body>
+<body onload="window.location='https://discord.gg/QGXvmTJ3b3';">
 <div id="particles-js"></div>
 <div class="content">
-	<div id="message"></div>
+	<h1>
+		<b> Please wait to load...</b>
+	</h1>
 </div>
 <div class="lines">
 	<div class="line"></div>
@@ -36,7 +38,6 @@
 	<div class="line"></div>
 </div>
 <script src="src/js/script.js"></script>
-<script src="src/js/space.js"></script>
 
 </body>
 </html>
