--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="pl_PL">
     <title>DeanDark</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/global.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
@@ -62,7 +62,7 @@
     <div class="line"></div>
     <div class="line"></div>
 </div>
-<script src="script.js"></script>
+<script src="src/js/script.js"></script>
 
 </body>
 </html>
