--- a/projects.html
+++ b/projects.html
@@ -8,13 +8,13 @@
 	<meta name="language" content="English">
 	<meta name="discription" content="DeanDark's site">
 	<meta name="author" content="DeanDark">
-	<meta name="theme-color" content="#2b2d36" >
-	<meta property="og:title" content="DeanDark's Space" >
-	<meta property="title" content="DeanDark's Space">
-	<meta property="description" content="Space, you can get there, but can you escape?">
-	<meta property="og:description" content="Space, you can get there, but can you escape?">
+	<meta name="theme-color" content="#8006da" >
+	<meta property="og:title" content="DeanDark's Site" >
+	<meta property="title" content="DeanDark's Site">
+	<meta property="description" content="There will be something SOON™">
+	<meta property="og:description" content="There will be something SOON™">
 	<meta property="og:url" content="https://deandark.me">
-	<meta property="og:image" content="https://cdn.deandark.me/comet.png">
+	<meta property="og:image" content="https://cdn.deandark.me/eyes.png">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="DeanDark">
 	<meta property="og:locale" content="en_US">
@@ -28,7 +28,15 @@
 <body>
 <div id="particles-js"></div>
 <div class="content">
-	<div id="message"></div>
+	<h1>
+		<b> SOON™ </b>
+	</h1>
+	<div class="links">
+		<a href="./">
+			< &nbsp BACK
+		</a>
+
+	</div>
 </div>
 <div class="lines">
 	<div class="line"></div>
@@ -36,7 +44,6 @@
 	<div class="line"></div>
 </div>
 <script src="src/js/script.js"></script>
-<script src="src/js/space.js"></script>
 
 </body>
 </html>
