seperate css and html from 404

--- a/404.html
+++ b/404.html
@@ -7,63 +7,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>404 error</title>
 	<link rel="stylesheet" href="src/css/global.css">
+	<link rel="stylesheet" href="src/css/style-404.css">
 
 	<link rel="icon" href="https://cdn.deandark.me/LogoWhite.svg" type="image/x-icon">
 </head>
-<style>
-    body,html{
-
-        margin: 0;
-        padding: 0;
-
-        height: 100dvh;
-        width: 100dvw;
-
-        background: var(--bg);
-
-        font-family: var(--font-family);
-    }
-
-    .container{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-
-        gap: 100px;
-    }
-
-    .error{
-        text-align: center;
-        color: #fff;
-
-        font-size: 2rem;
-
-        background: #666;
-
-        padding: 20px 40px;
-        border-radius: 16px;
-    }
-
-    .error #information{
-        font-size: 1.5rem;
-    }
-
-    svg{
-        width: 250px;
-        height: 250px;
-
-
-        animation: rotate 10s linear infinite;
-    }
-
-    @keyframes rotate {
-        100% {
-            transform: rotate(360deg);
-        }
-    }
-</style>
 <body onclick="window.location='https://deandark.me/'">
 <div class="container">
 	<svg width="1088" height="1088" viewBox="0 0 1088 1088" fill="none" xmlns="http://www.w3.org/2000/svg">
