--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>404 error</title>
 	<link rel="stylesheet" href="src/css/global.css">
+	<link rel="stylesheet" href="src/css/style-404.css">
 
 	<link rel="icon" href="https://cdn.deandark.me/LogoWhite.svg" type="image/x-icon">
 </head>
