--- a/discord.html
+++ b/discord.html
@@ -25,7 +25,10 @@
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	<link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
-<body onload="window.location='https://discord.gg/QGXvmTJ3b3';">
+<script>
+    window.location.href = 'https://discord.gg/QGXvmTJ3b3';
+</script>
+<body>
 <div id="particles-js"></div>
 <div class="content">
 	<h1>
