--- a/discord.html
+++ b/discord.html
@@ -26,7 +26,7 @@
 	<link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
 <script>
-    window.location.href = 'https://discord.gg/QGXvmTJ3b3';
+    window.location.href = 'https://discord.gg/F58wmJJsN7';
 </script>
 <body>
 <div id="particles-js"></div>
