--- a/index.html
+++ b/index.html
@@ -1,230 +1,68 @@
-<!--                                    Site creator:                           -->
-<!--                                    d3andark.github.io                      -->
 <!doctype html>
-<html lang="pl">
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport"
-	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="src/css/style.css">
-	<link rel="stylesheet" href="src/css/global.css">
-	<title>Vex Service</title>
-
-	<link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@200,300,400,500,600,700,1&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="language" content="English">
+    <meta name="discription" content="DeanDark's site">
+    <meta name="author" content="DeanDark">
+    <meta name="theme-color" content="#8006da" >
+    <meta property="og:title" content="DeanDark's Site" >
+    <meta property="title" content="DeanDark's Site">
+    <meta name="description" content="Witaj na stronie DeanDark! Jesteśmy domem dla Junior Developera, programisty, projektanta i wiele więcej. Odkryj nasze projekty, dowiedz się więcej o nas i skontaktuj się z nami.">
+    <meta property="og:description" content="Website that's made for and by DeanDark">
+    <meta property="og:url" content="https://deandark.me">
+    <meta property="og:image" content="https://cdn.deandark.me/DeanDarkOdznaka.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="DeanDark">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="pl_PL">
+    <title>DeanDark</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/global.css">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link rel="shortcut icon" href="https://cdn.deandark.me/DeanDarkOdznaka.png" type="image/x-icon">
 </head>
 <body>
+<div id="particles-js"></div>
+<div class="content">
+    <h1>
+       <b> DeanDark </b>
 
-	<div class="content">
+        <p>
+            <b>Designer, Junior Developer, Programmer, and more!</b>
+        </p>
 
-		<a href="#nav" class="top">
-			<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M3.21967 10.5303C2.92678 10.2374 2.92678 9.76256 3.21967 9.46967L7.46967 5.21967C7.76256 4.92678 8.23744 4.92678 8.53033 5.21967L12.7803 9.46967C13.0732 9.76256 13.0732 10.2374 12.7803 10.5303C12.4874 10.8232 12.0126 10.8232 11.7197 10.5303L8 6.81066L4.28033 10.5303C3.98744 10.8232 3.51256 10.8232 3.21967 10.5303Z"/>
-			</svg>
-		</a>
-
-			<nav id="nav">
-				<ul>
-					<li><a href="#home">Główna</a></li>
-					<li><a href="#about">O nas</a></li>
-					<li><a href="#cennik">Cennik</a></li>
-					<li><a href="#kontakt">Kontakt</a></li>
-				</ul>
-			</nav>
-
-		<main id="home">
-
-			<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M8.75 8C8.33579 8 8 8.33579 8 8.75V15.25C8 15.6642 8.33579 16 8.75 16H15.25C15.6642 16 16 15.6642 16 15.25V8.75C16 8.33579 15.6642 8 15.25 8H8.75ZM9.5 14.5V9.5H14.5V14.5H9.5Z" />
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M15.25 1C15.6642 1 16 1.33579 16 1.75V4H18.25C19.2165 4 20 4.7835 20 5.75V8H22.25C22.6642 8 23 8.33579 23 8.75C23 9.16421 22.6642 9.5 22.25 9.5H20V14.5H22.25C22.6642 14.5 23 14.8358 23 15.25C23 15.6642 22.6642 16 22.25 16H20V18.25C20 19.2165 19.2165 20 18.25 20H16V22.25C16 22.6642 15.6642 23 15.25 23C14.8358 23 14.5 22.6642 14.5 22.25V20H9.5V22.25C9.5 22.6642 9.16421 23 8.75 23C8.33579 23 8 22.6642 8 22.25V20H5.75C4.7835 20 4 19.2165 4 18.25V16H1.75C1.33579 16 1 15.6642 1 15.25C1 14.8358 1.33579 14.5 1.75 14.5H4V9.5H1.75C1.33579 9.5 1 9.16421 1 8.75C1 8.33579 1.33579 8 1.75 8H4V5.75C4 4.7835 4.7835 4 5.75 4H8V1.75C8 1.33579 8.33579 1 8.75 1C9.16421 1 9.5 1.33579 9.5 1.75V4H14.5V1.75C14.5 1.33579 14.8358 1 15.25 1ZM18.25 18.5C18.3881 18.5 18.5 18.3881 18.5 18.25V5.75C18.5 5.61193 18.3881 5.5 18.25 5.5H5.75C5.61193 5.5 5.5 5.61193 5.5 5.75V18.25C5.5 18.3881 5.61193 18.5 5.75 18.5H18.25Z"/>
-			</svg>
-
-			<h1>
-				Vex Service
-			</h1>
-			<p>
-				<b>Vex Service</b> to serwis specjalizujący się w naprawie i konserwacji urządzeń i technologii "smart".
-				W naszym zakres działania obejmuje szeroki wachlarz urządzeń, takich jak smart phone'y, tablety, zegarki, urządzenia IoT (Internet of Things), oraz wiele innych.
-			</p>
-		</main>
-
-		<section id="about">
-			<div class="header">
-				<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M9.19716 10C8.78295 10 8.44716 10.3358 8.44716 10.75C8.44716 11.1642 8.78295 11.5 9.19716 11.5H15.6972C16.1114 11.5 16.4472 11.1642 16.4472 10.75C16.4472 10.3358 16.1114 10 15.6972 10H9.19716Z"/>
-					<path d="M6.81521 14C6.401 14 6.06521 14.3358 6.06521 14.75C6.06521 15.1642 6.401 15.5 6.81521 15.5H13.3152C13.7294 15.5 14.0652 15.1642 14.0652 14.75C14.0652 14.3358 13.7294 14 13.3152 14H6.81521Z"/>
-					<path d="M5.23448 18C4.82027 18 4.48448 18.3358 4.48448 18.75C4.48448 19.1642 4.82027 19.5 5.23448 19.5H11.7345C12.1487 19.5 12.4845 19.1642 12.4845 18.75C12.4845 18.3358 12.1487 18 11.7345 18H5.23448Z"/>
-					<path fill-rule="evenodd" clip-rule="evenodd" d="M4.125 0H19.875C22.1505 0 24 1.8258 24 4.125C24 5.50898 23.5244 6.9186 22.8721 8.28481C22.2203 9.65 21.3566 11.0417 20.5204 12.3893L20.5123 12.4024C19.6634 13.7702 18.8431 15.0931 18.2313 16.3723C17.6178 17.6549 17.25 18.8229 17.25 19.875C17.25 21.3247 18.4253 22.5 19.875 22.5C21.3247 22.5 22.5 21.3247 22.5 19.875C22.5 18.9656 22.0382 18.1638 21.3328 17.6916C20.9886 17.4612 20.8963 16.9954 21.1267 16.6511C21.3572 16.3069 21.823 16.2147 22.1672 16.4451C23.2708 17.1838 24 18.4441 24 19.875C24 22.1532 22.1532 24 19.875 24H4.5C2.22183 24 0.375 22.1532 0.375 19.875C0.375 17.6408 1.63318 15.2193 2.96544 12.9732C3.31301 12.3871 3.66696 11.8107 4.01454 11.2447C4.81533 9.9406 5.58229 8.69158 6.15944 7.50732H3.38925C2.56627 7.50732 1.50322 7.31369 0.821635 6.47218C0.3054 5.83481 0 5.04963 0 4.125C0 1.84683 1.84682 0 4.125 0ZM1.5 4.125C1.5 2.67525 2.67525 1.5 4.125 1.5H16.6929C16.1039 2.21321 15.75 3.12778 15.75 4.125C15.75 4.84803 15.9351 5.4736 16.249 6.00732H3.38925C2.72675 6.00732 2.24063 5.8409 1.98726 5.52808C1.68071 5.1496 1.5 4.6955 1.5 4.125ZM15.75 19.875C15.75 20.8722 16.1039 21.7868 16.6929 22.5H4.5C3.05025 22.5 1.875 21.3247 1.875 19.875C1.875 18.1089 2.89964 16.0245 4.25558 13.7384C4.56945 13.2092 4.90093 12.6697 5.23508 12.1258C6.18764 10.5754 7.1619 8.98974 7.8117 7.50732H18C18.3302 7.50732 18.6216 7.29132 18.7176 6.97534C18.8136 6.65935 18.6916 6.31777 18.4172 6.13407C17.671 5.63457 17.25 4.99048 17.25 4.125C17.25 2.67525 18.4253 1.5 19.875 1.5C21.3274 1.5 22.5 2.65955 22.5 4.125C22.5 5.18219 22.1318 6.35389 21.5185 7.63853C20.9068 8.91977 20.0865 10.2438 19.2377 11.6114L19.2205 11.6392C18.3872 12.9819 17.5275 14.3673 16.8781 15.7251C16.2259 17.0887 15.75 18.4951 15.75 19.875Z"/>
-				</svg>
-				<h2>
-					O nas
-				</h2>
-			</div>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Cursus mattis molestie a iaculis at erat pellentesque adipiscing. In arcu cursus euismod quis viverra nibh cras pulvinar.
-				At augue eget arcu dictum varius. Quam adipiscing vitae proin sagittis.
-			</p>
-
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Massa placerat duis ultricies lacus sed. Ipsum dolor sit amet consectetur adipiscing elit.
-				Ut sem viverra aliquet eget sit amet tellus cras adipiscing.
-				Aliquet nibh praesent tristique magna.
-			</p>
-
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Libero justo laoreet sit amet cursus sit amet dictum sit.
-				Ullamcorper velit sed ullamcorper morbi tincidunt ornare.
-				Imperdiet sed euismod nisi porta lorem.
-			</p>
-		</section>
-
-		<section id="cennik">
-
-			<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M2.5 7.775V2.75C2.5 2.6837 2.52634 2.62011 2.57322 2.57322C2.62011 2.52634 2.6837 2.5 2.75 2.5H7.775C7.80785 2.49994 7.84039 2.50636 7.87077 2.51888C7.90114 2.53141 7.92874 2.5498 7.952 2.573L14.202 8.823C14.2253 8.84622 14.2438 8.87381 14.2564 8.90418C14.269 8.93456 14.2754 8.96712 14.2754 9C14.2754 9.03288 14.269 9.06544 14.2564 9.09582C14.2438 9.12619 14.2253 9.15378 14.202 9.177L9.177 14.202C9.15378 14.2253 9.12619 14.2438 9.09582 14.2564C9.06544 14.269 9.03288 14.2754 9 14.2754C8.96712 14.2754 8.93456 14.269 8.90418 14.2564C8.87381 14.2438 8.84622 14.2253 8.823 14.202L2.573 7.952C2.5498 7.92874 2.53141 7.90114 2.51888 7.87077C2.50636 7.84039 2.49994 7.80785 2.5 7.775ZM1 7.775V2.75C1 1.784 1.784 1 2.75 1H7.775C8.239 1 8.685 1.184 9.013 1.513L15.263 7.763C15.5909 8.09115 15.7751 8.53609 15.7751 9C15.7751 9.46391 15.5909 9.90885 15.263 10.237L10.237 15.263C9.90885 15.5909 9.46391 15.7751 9 15.7751C8.53609 15.7751 8.09115 15.5909 7.763 15.263L1.513 9.013C1.35035 8.85047 1.22133 8.65747 1.1333 8.44505C1.04528 8.23263 0.999983 8.00494 1 7.775ZM6 5C5.73478 5 5.48043 5.10536 5.29289 5.29289C5.10536 5.48043 5 5.73478 5 6C5 6.26522 5.10536 6.51957 5.29289 6.70711C5.48043 6.89464 5.73478 7 6 7C6.26522 7 6.51957 6.89464 6.70711 6.70711C6.89464 6.51957 7 6.26522 7 6C7 5.73478 6.89464 5.48043 6.70711 5.29289C6.51957 5.10536 6.26522 5 6 5Z"/>
-			</svg>
-
-			<h3>
-				Cennik
-			</h3>
-			<table>
-				<tr>
-					<th>
-						Usługa
-					</th>
-					<th>
-						Cena
-					</th>
-				</tr>
-				<tr>
-					<td>
-						Gała (Bez połyku)
-					</td>
-					<td>
-						50zł
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Gała (Z połykiem)
-					</td>
-					<td>
-						75zł
-					</td>
-				<tr>
-					<td>
-						Minetka
-					</td>
-					<td>
-						100zł
-					</td>
-				<tr>
-					<td>
-						Bez Gumy
-					</td>
-					<td>
-						150zł
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Z Gumą
-					</td>
-					<td>
-						300zł
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Full Service
-					</td>
-					<td>
-						500zł
-					</td>
-				<tr>
-					<td>
-						Full Service (Z noclegiem)
-					</td>
-					<td>
-						1000zł
-					</td>
-</tr>
-			</table>
-		</section>
-
-		<section id="kontakt">
+    </h1>
 
 
+    <div class="links">
+        <a href="./about">
+            About me
+        </a>
 
-			<svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" clip-rule="evenodd" d="M1.75 0C0.783502 0 4.49654e-09 0.7835 4.49654e-09 1.75V2.48577C-0.000162957 2.49479 -0.000162567 2.50381 4.49654e-09 2.51282V10.25C4.49654e-09 11.2165 0.783501 12 1.75 12H14.25C15.2165 12 16 11.2165 16 10.25V2.51265C16.0002 2.50376 16.0002 2.49485 16 2.48594V1.75C16 0.7835 15.2165 0 14.25 0H1.75ZM14.5 2.07029V1.75C14.5 1.61193 14.3881 1.5 14.25 1.5H1.75C1.61193 1.5 1.5 1.61193 1.5 1.75V2.07029L8 5.88063L14.5 2.07029ZM1.5 3.80902V10.25C1.5 10.3881 1.61193 10.5 1.75 10.5H14.25C14.3881 10.5 14.5 10.3881 14.5 10.25V3.80902L8.37929 7.39702C8.14507 7.53432 7.85493 7.53432 7.62071 7.39702L1.5 3.80902Z"/>
-			</svg>
+        <a href="https://github.com/d3andark" target="_blank">
+                GitHub
+        </a>
 
-			<h4>
-				Kontakt
-			</h4>
-			<div class="kontakt-content">
-			<div  class="kontakt-left">
-				<p>
-					Telefon:
-					<span>
-						694 759 947
-					</span>
-				</p>
-				<p>
-					Email:
-					<span>
-						<a href="mailto:vexservice20@gmail.com" target="_blank">
-							vexservice20@gmail.com
-						</a>
-					</span>
-				</p>
-				<p>
-					Adres:
-					<span>
-						ul. Kolonia 11, 37-400 Zarzecze
-					</span>
-			</div>
-
-			<div class="kontakt-right">
-				<button id="openModal">Otwórz Formularz</button>
-
-					<div id="myModal" class="modal">
-						<div class="modal-content">
-							<span class="close">
-								&times;
-							</span>
-							<iframe id="modal" allowtransparency="true" src="https://my.forms.app/form/6624436d59d233bf03c48937"></iframe>
-						</div>
-					</div>
-
-			</div>
-
-			</div>
-		</section>
-
-		<footer>
-			<p>
-				<a href="https://www.instagram.com/vex_service_" target="_blank">
-					Instagram
-				</a>
-			</p>
-
-			<p>
-				<a href="https://g.co/kgs/STctjru" target="_blank">
-					Google
-				</a>
-			</p>
-		</footer>
-
-	</div>
-
-	<script src="src/js/script.js"></script>
+        <a href="https://deandark.me/contact">
+                Contact
+        </a>
+    </div>
+    <div class="links_c2">
+        <a href="./projects">
+            Projects (Soon™)
+        </a>
+    </div>
+</div>
+<div class="lines">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+</div>
+<script src="src/js/script.js"></script>
 
 </body>
-<!--                                    Site creator:                           -->
-<!--                                    d3andark.github.io                      -->
 </html>
